Closed Bug 1907701 Opened 11 months ago Closed 11 months ago

Opening reddit posts spends a lot of time on the parent process

Categories

(Toolkit :: Safe Browsing, defect)

defect

Tracking

()

RESOLVED FIXED
130 Branch
Performance Impact low
Tracking Status
firefox130 --- fixed

People

(Reporter: mayankleoboy1, Assigned: baku)

References

(Depends on 1 open bug, )

Details

Attachments

(2 files)

Create a new profile OR use your existing profile.
Go to https://www.reddit.com/r/AgeofMythology/new/
Open some posts in the background tab (either by middle clicking on the post, or by Right click->Open link in new tab)
Maybe scroll a little

AR: Jank
New profile: https://share.firefox.dev/3zG1dak
Daily profile: https://share.firefox.dev/3WjEwkV

Also repros on a build from Jan2023, so not a new regression. This perf issue could be due to server changes at Reddit.

Attached file about:support
See Also: → 1904284, 1907364

There are a ton of runnables, and the Windows event loop probably has more overhead per runnable than necessary.

The most actionable step would be to cut down on the number of runnables. In the first profile, I see 8600 ProxyRelease runnables from FeatureHolder. This is coming from nsUrlClassifierDBService. This seems excessive.

Who knows about the URL classifier? Do we expect it to be active to this degree for reddit.com?

Performance Impact: --- → ?
Component: Performance → Safe Browsing
Product: Core → Toolkit
See Also: → 1813805

The Performance Impact Calculator has determined this bug's performance impact to be low. If you'd like to request re-triage, you can reset the Performance Impact flag to "?" or needinfo the triage sheriff.

Platforms: [x] Windows [x] macOS [x] Linux [x] Android
Resource impact: Some
[x] Able to reproduce locally

Performance Impact: ? → low

I would have thought that this would be atleast a Medium and possibly a High perf impact bug.

See Also: → 1909883

baku, you might remember a thing or two about UrlClassifier? See comment 2 here, could we avoid some runnables - or, we certainly at least could have just one main thread runnable, not two. But could we make everything threadsafe and avoid all the proxy releases?

Flags: needinfo?(amarchesini)

Hi Tim, is this something your team can help take a look? Thanks!

Flags: needinfo?(tihuang)
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Flags: needinfo?(tihuang)
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2e2f2dba7650 Reduce the number of runnables when releasing nsUrlClassifierDBService::FeatureHolder objects, r=dimi
Status: NEW → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch

This is what I get from the latest Nightly : https://share.firefox.dev/4daEEJG
Should this bug be reopened?

It would have been better if that patch had landed in a new bug. Oh well.
Mayank, can you open a new bug for the remaining slowness? Thank you.

Oh, but your profile also shows that the patch wasn't super successful at reducing FeatureHolder-related runnables.
Before: 1000 ProxyRelease runnables for FeatureHolder: https://share.firefox.dev/4dvb95g
After: 656 FeatureHolderRelease runnables: https://share.firefox.dev/3LSPoQM

The profile in comment #10 had ublock enabled.
Here is another profile with ublock disabled : https://share.firefox.dev/3Yv8LqF , https://share.firefox.dev/3WLyJoG

See Also: → 1911417
Depends on: 1911450

(In reply to Markus Stange [:mstange] from comment #11)

It would have been better if that patch had landed in a new bug. Oh well.
Mayank, can you open a new bug for the remaining slowness? Thank you.

Filed bug 1911450

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: