Bug 1907701 - Reduce the number of runnables when releasing nsUrlClassifierDBService::FeatureHolder objects, r=dimi

Differential Revision: https://phabricator.services.mozilla.com/D218222